# agri_nav

./: .gitignore  CMakeLists.txt  README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/agri_nav/: MainActivity.kt
app/android/app/src/main/res/xml/: network_security_config.xml
app/lib/: main.dart
app/lib/ffi/: nav_bridge.dart
app/lib/models/: arimr_parcel.dart  field_model.dart
app/lib/offline/: download_region_sheet.dart  offline_map_manager.dart
app/lib/services/: arimr_service.dart  coverage_service.dart  field_service.dart  geoportal_service.dart  wkt_parser.dart
app/lib/ui/: arimr_import_sheet.dart  cadastral_widgets.dart  field_builder_screen.dart  field_manager_screen.dart  map_view.dart  work_mode_view.dart
bridge/: agri_nav_ffi.cpp  agri_nav_ffi.h
core/include/: GeometryProcessor.h  GnssProcessor.h  GnssSimulator.h  NavEngine.h  ParcelMerger.h  SectionControl.h  SwathGuidance.h  SwathPlanner.h
core/src/: GeometryProcessor.cpp  GnssProcessor.cpp  GnssSimulator.cpp  NavEngine.cpp  ParcelMerger.cpp  SectionControl.cpp  SwathGuidance.cpp  SwathPlanner.cpp
